human-intervention-logs/org.springframework.boot:spring-boot-webmvc:4.0.6/gradle-test/gradle-test-2026-06-07T00-37-52-810828Z.log
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE

> Configure project :
GraalVM Reachability Metadata TCK
---------------------------------

> Task :tckTest
====================
Testing library: org.springframework.boot:spring-boot-webmvc:4.0.6
Command: `/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7702-a0b9d729/gradlew nativeTest`
Executing test...
-------
Starting a Gradle Daemon, 1 busy and 2 stopped Daemons could not be reused, use --status for details
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE
> Task :compileJava NO-SOURCE
> Task :tck-test-support:compileJava UP-TO-DATE
> Task :tck-test-support:processResources NO-SOURCE
> Task :processResources NO-SOURCE
> Task :tck-test-support:classes UP-TO-DATE
> Task :classes UP-TO-DATE
> Task :jar UP-TO-DATE
> Task :tck-test-support:jar UP-TO-DATE

> Task :compileTestJava FAILED
/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7702-a0b9d729/tests/src/org.springframework.boot/spring-boot-webmvc/4.0.6/src/test/java/org_springframework_boot/spring_boot_webmvc/Spring_boot_webmvcTest.java:152: error: cannot access HttpServlet
        assertThat(registration.getServlet()).isSameAs(dispatcherServlet);
        ^
  class file for jakarta.servlet.http.HttpServlet not found
/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7702-a0b9d729/tests/src/org.springframework.boot/spring-boot-webmvc/4.0.6/src/test/java/org_springframework_boot/spring_boot_webmvc/Spring_boot_webmvcTest.java:154: error: cannot access ServletRegistration
        assertThat(registration.getServletUrlMapping()).isEqualTo("/api/*");
                               ^
  class file for jakarta.servlet.ServletRegistration not found
/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7702-a0b9d729/tests/src/org.springframework.boot/spring-boot-webmvc/4.0.6/src/test/java/org_springframework_boot/spring_boot_webmvc/Spring_boot_webmvcTest.java:227: error: cannot access TemplateAvailabilityProvider
        boolean available = provider.isTemplateAvailable("home", environment, classLoader, new DefaultResourceLoader());
                                    ^
  class file for org.springframework.boot.autoconfigure.template.TemplateAvailabilityProvider not found
3 errors

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7702-a0b9d729/tests/src/org.springframework.boot/spring-boot-webmvc/4.0.6/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7702-a0b9d729/tests/src/org.springframework.boot/spring-boot-webmvc/4.0.6/src/test/java/org_springframework_boot/spring_boot_webmvc/Spring_boot_webmvcTest.java:152: error: cannot access HttpServlet
          assertThat(registration.getServlet()).isSameAs(dispatcherServlet);
          ^
    class file for jakarta.servlet.http.HttpServlet not found
  /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7702-a0b9d729/tests/src/org.springframework.boot/spring-boot-webmvc/4.0.6/src/test/java/org_springframework_boot/spring_boot_webmvc/Spring_boot_webmvcTest.java:154: error: cannot access ServletRegistration
          assertThat(registration.getServletUrlMapping()).isEqualTo("/api/*");
                                 ^
    class file for jakarta.servlet.ServletRegistration not found
  /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7702-a0b9d729/tests/src/org.springframework.boot/spring-boot-webmvc/4.0.6/src/test/java/org_springframework_boot/spring_boot_webmvc/Spring_boot_webmvcTest.java:227: error: cannot access TemplateAvailabilityProvider
          boolean available = provider.isTemplateAvailable("home", environment, classLoader, new DefaultResourceLoader());
                                      ^
    class file for org.springframework.boot.autoconfigure.template.TemplateAvailabilityProvider not found
  3 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)

> Run with --scan to generate a Build Scan (Powered by Develocity).
Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 5s
12 actionable tasks: 1 executed, 11 up-to-date

> Task :tckTest FAILED

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7702-a0b9d729/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':tckTest'.
> Test for org.springframework.boot:spring-boot-webmvc:4.0.6 failed with exit code 1.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 7s
9 actionable tasks: 1 executed, 8 up-to-date
